--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body class="body">
-    <button class="btn" type="button">Night</button>
+    <button class="btn" type="button">Nighttt</button>
 </body>
 <script src="script.js"></script>
 </html>
